@@ -1,3 +1,12 @@
+2002-03-16  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03133] Re: w3mman.1
+	* scripts/w3mman/Makefile (MAN1_TARGETS): added
+			(MAN_TARGETS): use $(MAN_TARGETS)
+			(INSTALL_MAN): added
+			(install): use $MAN1_TARGETS, $(INSTALL_MAN)
+	* scripts/w3mman/w3mman2html.cgi.in: $PAGER='cat'
+
 2002-03-15  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* scripts/.cvsignore: add xface2xbm
@@ -3187,4 +3196,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.351 2002/03/14 17:53:29 ukai Exp $
+$Id: ChangeLog,v 1.352 2002/03/15 16:10:26 ukai Exp $
